--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shengman Li" 
-  avatar           : "Shengman headshot.jpg"
+  avatar           : "shengman.png"
   bio              : "Postdoctoral Scholar, Electrical Engineering, Stanford University"
   location         : 
   employer         :
