--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Shengman Li" 
   avatar           : "shengman.png"
   bio              : "Postdoctoral Scholar, Electrical Engineering, Stanford University"
-  location         : 
-  employer         :
+  location         : "Stanford, CA"
+  employer         : "Stanford University"
   pubmed           : # example: "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=upQO_vAAAAAJ&view_op=list_works&sortby=pubdate"
   email            : "smli2020@stanford.edu"
