--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "shengman-li-619779236/"
+  linkedin         : "shengman-li-619779236"
   orcid            : "https://orcid.org/0000-0002-5462-7883"
   pinterest        :
   soundcloud       :
